# Ideal-Now-Diagram

./: .env.example  .gitignore  AGENTS.md  Open-Project.vbs  README.md  pyproject.toml  requirements.txt  serve.py
config/governance/: asset_status.yaml  metadata_required_fields.yaml  promotion_rules.yaml  retrieval_priority.yaml
config/models/: clarification_model.yaml  coding_llm.yaml  embedding_model.yaml
config/retrieval/: chunking.yaml  index_policy.yaml  ranking.yaml
config/storage/: paths.yaml
data/asset_registry/: asset_index.json  asset_links.json  tag_index.json
diagram_autogen/: __init__.py  pipeline.py
docs/onboarding/: getting_started.md
docs/runbooks/: asset_lifecycle.md
docs/troubleshooting/: common_issues.md
evals/scorecards/: scorecard_template.md
knowledge/: index.md
knowledge/policies/: code_governance.md  failed_case_policy.md  human_review_policy.md  metadata_policy.md  promotion_policy.md  retrieval_policy.md
knowledge/references/: common_clinical_logic.md  document_types.md  programming_patterns.md  terminology.md
knowledge/schemas/: asset_card.schema.json  compare_result.schema.json  failed_case.schema.json  promotion_record.schema.json  review_note.schema.json  task_card.schema.json
knowledge/scope/: in_scope.md  non_goals.md  out_of_scope.md  phase1_scope.md  phase2_roadmap.md
knowledge/standards/: approval_status_definition.md  asset_metadata_standard.md  code_review_standard.md  output_contracts.md  (+1 more)
prompts/: asset_retrieval.md  code_comparison.md  code_generation.md  failed_case_summary.md  task_clarification.md
(+50 files in other folders)
